Antes do professor olhar.

--- a/Projeto Final/css/estilo.css
+++ b/Projeto Final/css/estilo.css
@@ -1,100 +1,103 @@
-body{
-    background-color: #e9ddd8;
+body {
+    background-color: #734d3d;
 }
 
-img{
+img {
     border-radius: 50%;
-    height: 100px;
+    height: 95px;
+    right: auto;
     width: 100px;
     box-shadow: 0px 0px 20px #000000
 }
 
-h1{
+h1 {
     text-align: center;
-    font-family: "Brush Script MT";
-    font-size: 60px;
+    font-family:'Franklin Gothic Medium';
+    font-size: 45px;
     color: white;
-  text-shadow: 2px 2px 4px #000000;
-  padding-left: 180px;
+    text-shadow: 2px 2px 4px #000000;
+    padding-left: 180px;
 }
 
-.carrinho{
-    /* color: #e66b6b; */
-    color: #0000007d;
+.carrinho {
+    color: #0909097d;
     position: absolute;
-    right: 8px;
+    left: auto;
+    right: 10px;
     bottom: 14px;
     font-size: 41px;
     cursor: pointer;
 }
 
-#carrinho-principal{
+#carrinho-principal {
     font-size: 60px;
     color: #000000;
     cursor: pointer;
-    padding-left: 80px;
+    padding-left: 65px;
     vertical-align: text-bottom;
-    /* float: right; */
+   
 }
 
-#carrinho-principal:hover{
+#carrinho-principal:hover {
     color: white;
 }
 
-.btMaisMenos{
+.btMaisMenos {
     right: 10px;
     bottom: 20px;
     position: absolute;
 }
 
-.btMais, .btMenos{
+.btMais,
+.btMenos {
     cursor: pointer;
-    color: #e66b6b;
+    color: #ea1919;
     font-weight: bold;
     font-size: 30px;
     padding: 5px;
 }
 
-.quantidade{
+.quantidade {
     position: absolute;
     right: -76px;
     bottom: 20px;
-    background-color: #e66b6b;
-    padding: 20px;
-    border-radius: 60%;
-    font-size: 20px;
-}
-.carrinho:hover{
-    color: #e66b6b;
+    background-color: #093884;
+    padding: 15px;
+    border-radius: 70%;
+    font-size: 40px;
 }
 
-.produto{
+.carrinho:hover {
+    color: #21db0c;
+}
+
+.produto {
     position: relative;
     width: 500px;
     margin-top: 20px;
 }
 
-.embrulho{
+.embrulho {
     display: grid;
     place-items: center;
 }
 
-#formulario{
+#formulario {
     display: grid;
     place-items: center;
 }
 
-label{
+label {
     font-size: 14px;
 }
 
-input{
+input {
     width: 500px;
     height: 20px;
     border: solid #e66b6b;
 }
 
-#btFinalizar{
+#btFinalizar {
     background-color: #e66b6b;
     border: none;
     margin-top: 10px;
@@ -103,8 +106,8 @@ input{
 }
 
 
-p{
-    background-color: #f7eaef;
+p {
+    background-color: #eae4e4;
     position: absolute;
     top: -8px;
     left: 70px;
@@ -112,13 +115,13 @@ p{
     height: 73px;
     z-index: -1;
     padding-left: 40px;
-    padding-top: 10px;
-    border: #e66b6b solid 2px;
+    padding-top: 2px;
+    border: #000000 solid 4px;
     font-family: 'Lucida Handwriting';
-    box-shadow: 0px 0px 5px #000000;
+    box-shadow: 0px 0px 10px #000000;
 }
 
- .valor{
+.valor {
     text-align: right;
     float: right;
     margin-right: 10px;
